--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,12 @@ references:
 jobs:
   # Build debug APK for unit tests and an instrumented test APK
   build:
-    working_directory: ~/datavent
+    working_directory: ~/build
     docker:
       - image: circleci/node:9.8.0
     steps:
       - checkout
+      - run: cd datavent/dashboard/
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
@@ -22,8 +23,9 @@ jobs:
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - node_modules      
-  test:
+            - node_modules
+
+  test_dev:
     docker:
       - image: circleci/node:9.8.0
     steps:
@@ -32,9 +34,33 @@ jobs:
           name: Run unit tests
           command: npm test
 
+  deploy:
+    docker:
+      - image: circleci/node:9.8.0
+    step:
+      - checkout
+      - run:
+          name: Install flutter tools
+          command: npm install -g firebase-tools
+      - run:
+          name: Deploy dashboard to firebase hosting
+          command: firebase deploy --token "$FIREBASE_DEPLOY_TOKEN"
+
 workflows:
   version: 2
   workflow:
     jobs:
       - build
-      - test
+      - test_dev:
+          filters:
+            branches:
+              only:
+                - dev
+                - /feature-.*/
+      - deploy:
+          requires:
+            - build
+            - test_dev
+          filters:
+            branches:
+              only: master
