--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - image: circleci/node:9.8.0
     steps:
       - checkout
+      - run: cd datavent/dashboard/
       - run:
           name: Run unit tests
           command: npm test
