--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ references:
 jobs:
   # Build debug APK for unit tests and an instrumented test APK
   build:
-    working_directory: /home/circleci/project/datavent/dashboard
+    working_directory: /home/circleci/project/
     docker:
       - image: circleci/node:9.8.0
     steps:
@@ -28,7 +28,7 @@ jobs:
             - node_modules
 
   test_dev:
-    working_directory: /home/circleci/project/datavent/dashboard
+    build_directory: /home/circleci/project/datavent/dashboard
     docker:
       - image: circleci/node:9.8.0
     steps:
