--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ references:
 jobs:
   # Build debug APK for unit tests and an instrumented test APK
   build:
-    working_directory: /home/circleci/project/
     docker:
       - image: circleci/node:9.8.0
     steps:
       - checkout
+        path: ~/project
       - run:
           name: File system orientation
           command: pwd && ls
@@ -28,11 +28,11 @@ jobs:
             - node_modules
 
   test_dev:
-    working_directory: /home/circleci/project/datavent/dashboard
     docker:
       - image: circleci/node:9.8.0
     steps:
       - checkout
+        path: ~/project
       - run:
           name: File system orientation
           command: pwd && ls
