--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
     docker:
       - image: circleci/node:9.8.0
     steps:
-      - checkout
-        path: ~/project
+      - checkout:
+          path: ~/project
       - run:
           name: File system orientation
           command: pwd && ls
@@ -31,8 +31,8 @@ jobs:
     docker:
       - image: circleci/node:9.8.0
     steps:
-      - checkout
-        path: ~/project
+      - checkout:
+          path: ~/project
       - run:
           name: File system orientation
           command: pwd && ls
