added path to checkout in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,12 @@ references:
 jobs:
   # Build debug APK for unit tests and an instrumented test APK
   build:
+    working_directory: ~/project/datavent/dashboard
     docker:
       - image: circleci/node:9.8.0
     steps:
       - checkout:
-          path: ~/project
+          path: ~/project/datavent
       - run:
           name: File system orientation
           command: pwd && ls
@@ -28,11 +29,12 @@ jobs:
             - node_modules
 
   test_dev:
+    working_directory: ~/project/datavent/dashboard
     docker:
       - image: circleci/node:9.8.0
     steps:
       - checkout:
-          path: ~/project
+          path: ~/project/datavent
       - run:
           name: File system orientation
           command: pwd && ls
