--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,8 @@ workflows:
     jobs:
       - build
       - test_dev:
+          requires:
+            - build
           filters:
             branches:
               only:
