--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
           name: File system orientation
           command: pwd && ls
       - run:
+          name: File system orientation
+          command: cd datavent && pwd && ls
+      - run:
+          name: File system orientation
+          command: cd dashboard && pwd && ls
+      - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
       - restore_cache:
