--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,16 +9,11 @@ jobs:
     docker:
       - image: circleci/node:9.8.0
     steps:
-      - checkout
+      - checkout:
+          path: ~/project/datavent/dashboard
       - run:
           name: File system orientation
           command: pwd && ls
-      - run:
-          name: File system orientation
-          command: cd datavent && pwd && ls
-      - run:
-          name: File system orientation
-          command: cd ./datavent/dashboard && pwd && ls
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
