--- a/datavent/dashboard/package.json
+++ b/datavent/dashboard/package.json
@@ -10,7 +10,7 @@
     "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
     "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "test": "npm run lint && ./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "axios": "0.17.1",
