--- a/datavent/dashboard/package.json
+++ b/datavent/dashboard/package.json
@@ -21,11 +21,11 @@
     "element-ui": "2.0.8",
     "faker": "^4.1.0",
     "file-saver": "1.3.3",
+    "firebase": "^4.13.1",
     "font-awesome": "4.7.0",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.2",
     "jszip": "3.1.5",
-    "mocha": "^5.0.5",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -46,6 +46,7 @@
     "xlsx": "^0.11.16"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.15",
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
@@ -68,6 +69,13 @@
     "file-loader": "1.1.5",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.0",
+    "mocha": "^5.1.1",
     "node-notifier": "5.1.2",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
