--- a/datavent/dashboard/package.json
+++ b/datavent/dashboard/package.json
@@ -22,6 +22,7 @@
     "faker": "^4.1.0",
     "file-saver": "1.3.3",
     "firebase": "^4.13.1",
+    "firebase-admin": "^5.12.0",
     "font-awesome": "4.7.0",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.2",
@@ -57,6 +58,7 @@
     "babel-plugin-transform-vue-jsx": "3.5.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-2": "6.24.1",
+    "chai": "^4.1.2",
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.3.0",
     "cross-env": "5.1.1",
@@ -67,11 +69,15 @@
     "eslint-plugin-html": "4.0.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase-mock": "git+https://github.com/soumak77/firebase-mock.git",
+    "firebase-server": "^0.12.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
@@ -90,6 +96,8 @@
     "script-loader": "0.7.2",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
+    "sinon": "^5.0.3",
+    "sinon-chai": "^3.0.0",
     "svg-sprite-loader": "3.5.2",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
