--- a/datavent/api/functions/package.json
+++ b/datavent/api/functions/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "jest": "jest '.*spec.js'"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,11 @@
     "firebase-functions": "^1.0.2"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "firebase-functions-test": "^0.1.2",
+    "jest": "^22.4.3",
     "mocha": "^5.1.1",
     "sinon": "^5.0.7"
   }
