--- a/datavent/api/functions/package.json
+++ b/datavent/api/functions/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "jest": "jest '.*spec.js'"
+    "jest": "./node_modules/jest/bin/jest.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.2"
+    "firebase-functions": "^1.0.2",
+    "pdfkit": "^0.8.3"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "firebase-functions-test": "^0.1.2",
+    "firebase-mock": "^2.2.2",
     "jest": "^22.4.3",
     "mocha": "^5.1.1",
-    "sinon": "^5.0.7"
+    "mock-cloud-firestore": "^0.2.1",
+    "sinon": "^5.0.7",
+    "supertest": "^3.0.0"
   }
 }
